Added misc dot files:
    .Xdefaults
        - urxvt settings
    .alias.linux .alias.open
        - sort aliases
    .bash_logout
        - delete cache files
    .bashrc
        - update layout
    .gitignore
        - http://tinyurl.com/284t5ss
    .htoprc
        - save my preferred layout
    .i3/
        - default settings
    .irssi/
        - touch config
    .profile
        - default
    .vim/plugin/securemodelines.vim
        - allow only specific modelines
    .vimrc
        - added AppendModeline functions
    .virtaal
        - default settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,53 @@
-#Ignore everything but the files I really wanna track
-*
-!.alias*
-!.bashrc
-!.gitconfig
-!.gitignore
-!.vim
-!.vimrc
-!.vimperator
-!.vimperatorrc*
+#Ignore everything
+/*
+#Don't ignore dotfiles
+!.*
+
+#But ignore these
+.adobe
+.aptitude
+.bash_eternal_history
+.bash_history
+.cache
+.config
+.dbus
+.elinks
+.esd_auth
+.fehrc
+.fontconfig
+.gconfd
+.glivrc
+.gnupg
+.gtk-bookmarks
+.gstreamer-0.10
+.img
+.lesshst
+.links2
+.local
+.macromedia
+.mc
+.mozilla
+.mplayer
+.mutt/
+.muttrc
+.pki
+.pulse/
+.pulse-cookie
+.recently-used.xbel
+.selected_editor
+.ssh
+.subversion
+.sudo_as_admin_successful
+.*.swp
+.terminfo
+.thumbnails
+.translate_toolkit
+.viminfo*
+.vimperator/info
+.virtaal/tm.db
+.w3m
+.wmii
+.wm_style
+.Xauthority
+.xsession-errors
+.zathura
