Added lots of dot directories to .gitignore
    I really hate how git handle * and !.*

--- a/.gitignore
+++ b/.gitignore
@@ -4,50 +4,197 @@
 !.*
 
 #But ignore these
+.AbiSuite
 .adobe
+.alien-arena
 .aptitude
+.asoundrc*
+.aspell.*
 .bash_eternal_history
 .bash_history
+.B.blend
+.BillardGL.conf.v7
+.bittorrent
+.bluefish
+.boumlrc
+.bzr.log
 .cache
+.checkbox
+.compiz
+.com.zerog.registry.xml
 .config
+.cosa
+.covers
+.cups
+.cvspass
 .dbus
+.ddd
+.diffuse
+.directory
+.dmrc
+.DownloadManager
+.dreampie
+.dvdcss
+.e
+.e.*
+.easy_e17.conf*
+.ecomp
+.ecore
 .elinks
+.enna
 .esd_auth
+.exaile
+.exchange
 .fehrc
+.festival_history
+.fgfs
+.filezilla
+.flrec
+.font*
 .fontconfig
+.frostwire*
+.gconf*
 .gconfd
+.gecavi
+.gegl*
+.gem
+.gerbview
+.ghttrack.cfg
+.gimp*
+.gitk
+.gksu*
 .glivrc
+.glurp
+.gmpc
+.gnochm
+.gnome*
+.gntpositions
+.gnu*
 .gnupg
-.gtk-bookmarks
+.grdc
 .gstreamer-0.10
+.gtk*
+.gtk-bookmarks
+.httrack.ini
+.ICEauthority
+.icons
 .img
+.img*
+.jackdrc
+.jagex*
+.java
+.jigl
+.jmol
+.kde*
+.kicad
+.last_backup
 .lesshst
+.liferea*
+.links*
 .links2
+.linterweb
 .local
+.lyrics
+.lyx
 .macromedia
+.matplotlib
 .mc
+.mcop*
+.mono
 .mozilla
+.mp3blaster
 .mplayer
+.msf*
 .mutt/
 .muttrc
+.mysql*
+.nautilus
+.ncmpcpp
+.neocon
+.netx*
+.newsbeuter
+.nexuiz
+._noip-2.1.9-1
+.nvidia-settings-rc
+.octave_hist
+.ooo*
+.openarena
+.opendict
+.openoffice.org
+.packages.list
+.pass
+.pida*
 .pki
+.printer-groups.xml
 .pulse/
 .pulse-cookie
+.purple
+.pyhistory
+.qemu-launcher
+.qf
+.qingy
+.qt
+.quakelive
+.rage
+.recently-used*
 .recently-used.xbel
+.rex
+.sage
+.screen*
 .selected_editor
+.service_proxy_dir
+.sig
+.silc
+.sjphone
+.skel
 .ssh
 .subversion
 .sudo_as_admin_successful
+.sw*
 .*.swp
+.synaptic
+.tdrc
 .terminfo
+.texmf-var
+.themes
 .thumbnails
+.thunderbird
+.todo
 .translate_toolkit
-.viminfo*
+.tsclient
+.tucan
+.ubuntu-r
+.update-*
+.vagalume
+.viminf*
 .vimperator/info
 .virtaal/tm.db
+.VirtualBox
+.vlc
 .w3m
+.wesnoth*
+.wine
+.wireshark
+.wmcliphis*
 .wmii
+.wmndrc
+.wmpinboarddata
+.wmrecord
 .wm_style
+.wxglade
 .Xauthority
-.xsession-errors
+.xine
+.xinitrc
+.xmdd*
+.xmind
+.xmms
+.Xscrc
+.xscreensaver-getimage.cache
+.xsession*
+.xvidcaprc
+.y2log
+.y2usersettings
+.yast*
 .zathura
+.zenmap
+.ZoiperCommunicator
