--- a/.gitconfig
+++ b/.gitconfig
@@ -3,8 +3,8 @@
     email = chilicuil@users.sourceforge.net
 
 [alias]
-    ci = commit
-    co = checkout
+    cm = commit
+    cmv = commit -v
     st = status
     br = branch
     unstage = reset HEAD --
@@ -16,3 +16,16 @@
 
 [merge]
     tool = vimdiff
+
+[branch "master"]
+    remote = origin
+    merge  = refs/heads/master
+
+    ;http://tinyurl.com/yeevhcr
+    ;This tells Git 2 things:
+
+   ;1. When you're on the master branch, the default remote is origin. 
+   
+   ;2. When using git pull on the master branch, with no remote and
+      ;branch specified, use the default remote (origin) and merge in
+      ;the changes from the master branch.
