--- a/.muttrc
+++ b/.muttrc
@@ -3,11 +3,21 @@ push <show-version>                #show version
 set nomark_old                     #avoid marking unread msgs as old ones
 set nobeep                         #plz dont be noisy
 set delete                = yes    #don't confirm
+set quit                  = yes    #don't confirm
 set imap_check_subscribed = yes    #automatically poll subscribed mailboxes for new mail
 set query_command         = "~/code/learn/python/goobook query '%s'" #autocomplete addresses
 set sort                  = "threads"
 set sort_aux              = "last-date-received"
+#set sort_aux             = "reverse-last-date-received" #like gmail
+set sort_re                        # thread based on regex
+set reply_regexp          = "^(([Rr][Ee]?(\[[0-9]+\])?: *)?(\[[^]]+\] *)?)*"
 set followup_to           = no     #http://larve.net/people/hugo/2000/07/ml-mutt
+set pager_index_lines   = 10                                    # number of index lines to show 
+set pager_context       = 5                                     # number of context lines to show
+set pager_stop                     # don't go to the next message automatically
+unset markers                                                   # no ugly plus signs
+set menu_scroll
+set quote_regexp          = "^( {0,4}[>|:#%]| {0,4}[a-z0-9]+[>|]+)+"
 set honor_followup_to     = no
 set include               = yes    #automatically quote message
 set editor                = "vim +':call Word_mode()' + %s" #is there any other editor?
@@ -15,12 +25,69 @@ set edit_headers          = yes    #you can add cc, bcc, or change ur from input
 set mail_check            = 90     #how often mutt will query gmail for new email
 set timeout               = 20
 set move                  = no     #don't ask to move read messages to mbox on exit
+set pipe_decode                                                 # strip headers and eval mimes when piping
+set thorough_search                                             # strip headers and eval mimes before searching
+#set signature             = ~/.mutt/conf/signature
+
+# formats
+set date_format         = "%m/%d/%y at %I:%M%P"
+set index_format        = "%3C %Z %D %-15.15L (%?l?%4l&%4c?) %s"
+set status_format       = "-%r- %v ---[ Folder: %f, Msgs: %m%?n? New: %n?%?d? Del: %d?%?t? Tag: %t?%?l? %l? ]%?p?---- .: %p waiting to send :. ?--%>- (%P) ---"
+set alias_format        = "%4n %t %-20a  %r"
+
+# composing mail
+set envelope_from                                               # which from?
+set sig_dashes                                                  # dashes before my sig... sweet
+set edit_headers                                                # show headers when composing
+set fast_reply                                                  # skip to compose when replying
+#set sendmail_wait       = -1                                    # don't wait for sending... to complete
+set askcc                                                       # ask for CC:
+set fcc_attach                                                  # save attachments with the body
+unset mime_forward                                              # forward attachments as part of body
+set forward_format      = "Fwd: %s"                             # format for subject when forwarding
+set forward_decode                                              # decode when forwarding
+set attribution         = "On %d, %n wrote:"                    # set the attribution
+set reply_to                                                    # reply to Reply to: field
+set reverse_name                                                # reply as whomever it was to
+set include                                                     # include message in replies
+set forward_quote                                               # include message in forwards
+
+# headers to show
+ignore *                                                        # ignore all headers
+unignore from: to: cc: date: subject:                           # show only these
+hdr_order from: to: cc: date: subject:                          # and in this order
 
 # === Mappings ===
+bind index,pager \#     noop
+bind index i            noop
 bind  pager   k     previous-line
 bind  pager   j     next-line
 bind editor <Tab>   complete-query
 bind editor       complete
+# bindings
+bind pager i            exit
+bind pager /            search
+bind pager <up>         previous-line
+bind pager <down>       next-line
+bind pager k            previous-line
+bind pager j            next-line
+bind pager gg           top
+bind pager G            bottom
+bind index gg           first-entry
+bind index G            last-entry
+bind pager K            previous-undeleted
+bind pager J            next-undeleted
+bind index K            previous-unread
+bind index J            next-unread
+bind index,pager R      group-reply
+
+# === Macros ===
+macro index B   "<limit>~b "                "search message bodies"
+macro index I   "<change-folder>!<enter>"   "go to Inbox"
+
+# save a decoded copy in ~
+macro index P   "<pipe-message>cat > ~/"    "save message as"
+
 
 # === MIME ===
 # Tell mutt which MIME types to auto-view
