Changed email, added some other little shortcuts

--- a/.virtaal/virtaal.ini
+++ b/.virtaal/virtaal.ini
@@ -1,5 +1,5 @@
 [language]
-targetlang = es_MX
+targetlang = es
 targetfont = 
 sourcefont = 
 recentlangs = en,es_MX
@@ -12,14 +12,14 @@ depth = 10000
 
 [general]
 lastdir = 
-windowwidth = 1024
-windowheight = 576
+windowwidth = 1020
 maximized = 
+windowheight = 538
 
 [translator]
-email = disco299@gmail.com
-name = P.L. Francisco
 team = 
+email = javier@i.am
+name = P.L. Javier
 
 [placeable_state]
 fileplaceable = disabled
