Added .pbuilderrc and .xinitrc, modified others
    - i3/config: Conf updated to the git version

    - .vim/irssi: Added irssilog fyletype

    - Still don't know how to hide the user/passwd
      from the .irssi/config file

--- a/.gitignore
+++ b/.gitignore
@@ -190,13 +190,12 @@
 .wxglade
 .Xauthority
 .xine
-.xinitrc
 .xmdd*
 .xmind
 .xmms
+.xsession-errors
 .Xscrc
 .xscreensaver-getimage.cache
-.xsession*
 .xvidcaprc
 .y2log
 .y2usersettings
