--- a/.i3/config
+++ b/.i3/config
@@ -51,11 +51,7 @@ workspace 7 work
 workspace 8 work
 workspace 9 work
 workspace 10 work
-#workspace 11 work
-#workspace 12 work
-#workspace 13 work
-#workspace 14 work
-#workspace 15 work
+workspace 20 reading
 
 # Requires latest version (from git)
 # ---------------------------------->
