--- a/.ssh/config
+++ b/.ssh/config
@@ -3,3 +3,12 @@
         #Hostname github.com
         #PreferredAuthentications publickey
         #IdentityFile /home/chilicuil/.ssh/id_dsa.git
+
+Host buzz
+Port 1001
+
+Host mater
+Port 22
+
+Host ndia
+Port 1001
