--- a/.pbuilderrc
+++ b/.pbuilderrc
@@ -33,7 +33,9 @@
 ###########################################################
 # https://wiki.ubuntu.com/PbuilderHowto
 
-PATH_PBUILDER="/var/cache/pbuilder" #without the last "/"
+if [ -z "$PATH_PBUILDER" ]; then
+    PATH_PBUILDER="/var/cache/pbuilder" #without the last "/"
+fi
 
 # Codenames for Debian suites according to their alias. Update these when needed.
 UNSTABLE_CODENAME="sid"
@@ -50,7 +52,8 @@ UBUNTU_SUITES=("maverick" "lucid" "karmic" "jaunty" "hardy")
 
 # Mirrors to use. Update these to your preferred mirror.
 DEBIAN_MIRROR="ftp.us.debian.org"
-UBUNTU_MIRROR="mirrors.kernel.org"
+UBUNTU_MIRROR="us.archive.ubuntu.com"
+#UBUNTU_MIRROR="mirrors.kernel.org" #sometimes it's out of sync
 
 # Optionally use the changelog of a package to determine the suite to use if
 # none set.
@@ -95,15 +98,13 @@ fi
 #################
 
 ###################################################################################
-
-BASETGZ="$PATH_PBUILDER/$NAME-base.tgz"
+BASETGZ="$PATH_PBUILDER/$NAME/$NAME-base.tgz"
 # Optionally, set BASEPATH (and not BASETGZ) if using cowbuilder
 # BASEPATH="$PATH_PBUILDER/$NAME/base.cow/"
 DISTRIBUTION="$DIST"
-BUILDRESULT="$PATH_PBUILDER/$NAME/result/"
 APTCACHE="$PATH_PBUILDER/$NAME/aptcache/"
-BUILDPLACE="$PATH_PBUILDER/build/"
-
+BUILDPLACE="$PATH_PBUILDER/$NAME/build/"
+BUILDRESULT="$HOME/misc/packages/ubuntu/results/$NAME/"
 ###################################################################################
 
 if $(echo ${DEBIAN_SUITES[@]} | grep -q $DIST); then
@@ -129,5 +130,5 @@ fi
 #sudo chmod a+w $PATH_PBUILDER/ccache"
 #export CCACHE_DIR="$PATH_PBUILDER/ccache"
 #export PATH="/usr/lib/ccache:${PATH}"
-#EXTRAPACKAGES=ccache
-#BINDMOUNTS="${CCACHE_DIR}"
+EXTRAPACKAGES=ccache
+BINDMOUNTS="${CCACHE_DIR}"
